# CarConnectivity

./: .gitignore  CHANGELOG.md  Makefile  README.md  carconnectivity.db  pyproject.toml  setup_requirements.txt
.github/workflows/: build.yml  build_and_publish.yml  codeql-analysis.yml
doc/: Config.md
examples/: all_cars.py  start_stop_charging.py
src/carconnectivity/: attributes.py  battery.py  carconnectivity.py  carconnectivity_base.py  charging.py  charging_connector.py  charging_station.py  climatization.py  command_impl.py  commands.py  connectors.py  doors.py  drive.py  enums.py  errors.py  fuel_tank.py  garage.py  image_util.py  images.py  interfaces.py  json_util.py  lights.py  location.py  maintenance.py  objects.py  observable.py  plugins.py  position.py  software.py  units.py  util.py  vehicle.py  window_heating.py  windows.py
src/carconnectivity/utils/: timeout_lock.py
src/carconnectivity_connectors/base/: connector.py
src/carconnectivity_connectors/base/ui/: connector_ui.py
src/carconnectivity_plugins/base/: plugin.py
src/carconnectivity_plugins/base/ui/: plugin_ui.py
src/carconnectivity_services/base/: location_service.py  service.py
src/carconnectivity_services/location/: geofence_location_service.py  location_service.py  osm_location_service.py
src/carconnectivity_services/osm/: osm_location_service.py
