[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "carconnectivity"
description = "Library for retrieving information from car connectivity services"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
    { name = "Till Steinbach" }
]
dependencies = [
    "argparse",
    "cryptography",
    "JSON_minify~=0.3.0",
    "pytimeparse~=1.1.8",
    "ntplib~=0.4.0",
    "haversine~=2.9.0",
    "requests~=2.32.5",
]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries"
]

[project.optional-dependencies]
connectors = [
    'carconnectivity-connector-volkswagen>=0.10.1',
    'carconnectivity-connector-skoda>=0.11.7',
    'carconnectivity-connector-seatcupra>=0.5.1',
    'carconnectivity-connector-tronity>=0.7.1',
]
plugins = [
    'carconnectivity-plugin-mqtt>=0.9.1',
    'carconnectivity-plugin-mqtt_homeassistant>=0.6.1',
    'carconnectivity-plugin-abrp>=0.8.1',
    'carconnectivity-plugin-homekit>=0.7.4',
    'carconnectivity-plugin-webui>=0.7',
    'carconnectivity-plugin-database>=0.3',
]
images = [
    'pillow~=12.1.0',
    'ascii_magic~=2.7.2'

]
all = [
    'carconnectivity[images,connectors,plugins]'
]

[project.urls]

[project.scripts]
carconnectivity = "carconnectivity.carconnectivity_base:main"
allcars = "all_cars:main"

[tool.setuptools_scm]
write_to = "src/carconnectivity/_version.py"

[tool.pylint.format]
max-line-length = 160
ignore-patterns= "_version.py"

[tool.bandit]
targets = "carconnectivity"